# llm-wiki

./: .editorconfig  .gitignore  .jscpd.json  AGENTS.md  CONTEXT.md  README.md  README.zh-CN.md  SKILL.md  commitlint.config.js  constraints.yaml  eslint.config.mjs  init.sh  justfile  knip.config.ts  renovate.json
.claude/: settings.json
.claude/hooks/: pre-write-naming.sh
.git-hooks/: check-naming.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.husky/: pre-commit
cli/: pyproject.toml
cli/src/llm_wiki/: __init__.py
cli/src/llm_wiki/application/: __init__.py  build_index.py  get_status.py  init_project.py  list_pages.py  parse_document.py  search_wiki.py  validate_wiki.py
cli/src/llm_wiki/domain/: __init__.py  errors.py  models.py  ports.py
cli/src/llm_wiki/infrastructure/: bm25_search.py  cli.py  container.py  filesystem.py  markitdown_parser.py
cli/tests/integration/: test_bm25_search.py  test_e2e.py  test_filesystem.py  test_markitdown_parser.py
cli/tests/unit/: test_arch.py  test_build_index.py  test_domain.py  test_get_status.py  test_init_project.py  test_list_pages.py  test_parse_document.py  test_search_wiki.py  test_validate_wiki.py
docs/: google-okf-distillation-prd.md  karpathy-llm-wiki-gist.md  llm-wiki-cli-prd.md  okf-google-cloud-blog.md  typescript-sdk-prd.md  typescript-sdk-source-parsing-v1-prd.md
scripts/: test-guardrails.sh
sdk/: docker-compose.pg-test.yml  eslint.config.mjs  package-lock.json  package.json
sdk/examples/: create-knowledge-base.mjs
stellarlink-kb/: index.md  log.md
(+139 files in other folders)
